// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FuseActions renders bombed 1`] = `
<div
  className="FuseActions"
>
  <button
    className="Icon"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="FuseActions-action fa fa-comment-o"
    />
  </button>
  <button
    className="Icon"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="fa fa-bomb is-active"
    />
  </button>
</div>
`;

exports[`FuseActions renders unbombed 1`] = `
<div
  className="FuseActions"
>
  <button
    className="Icon"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="FuseActions-action fa fa-comment-o"
    />
  </button>
  <button
    className="Icon"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="fa fa-bomb"
    />
  </button>
</div>
`;
